refactor(backend): tighten recommendation pipeline boundaries